mise en place de la section titre

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <input type="name" placeholder="nom">
+        <input type="surname" placeholder="prenom">
+        <input type="age" placeholder="age">
+    </section>
 </body>
 </html>
