--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <textarea name="description" id="description"></textarea>
+    </section>
 </body>
 </html>
