mise en place de la section formations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <section>
+    <input type="date de debut" placeholder="date de debut">
+    <input type="date de fin" placeholder="date de fin">
+    <input type="date de debut" placeholder="date de debut">
+    <input type="date de fin" placeholder="date de fin">
+    <input type="date de debut" placeholder="date de debut">
+    <input type="date de fin" placeholder="date de fin">
+    <input type="date de debut" placeholder="date de debut">
+    <input type="date de fin" placeholder="date de fin">
+    </section>
     
 </body>
 </html>
