--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <input type="association" placeholder="type d'association">
+        <input type="association" placeholder="type d'association">
+        <input type="association" placeholder="type d'association">
+        <input type="association" placeholder="type d'association">
+        <input type="association" placeholder="type d'association">
+        
+    </section>
 </body>
 </html>
